# Chronicle

./: .gitignore  Cargo.toml  Dioxus.toml  PLAN.md  PLAN_ANDROID.md  PROCESS.md  PROGRESS.md  README.md  build.rs
.antigravitycli/: 5a3b43f9-7a9e-4182-ae67-ca1eb944c867.json
.config/chronicle/: settings.json
.github/workflows/: build.yml  release.yml
patches/tao-0.30.8/src/: event_loop.rs  lib.rs
patches/tao-0.30.8/src/platform_impl/linux/: event_loop.rs  keyboard.rs
patches/tao-0.30.8/src/platform_impl/windows/: event_loop.rs  window_state.rs
src/: app.rs  main.rs
src/components/: dialog.rs  editor.rs  formatting_bar.rs  mod.rs  preview.rs  sidebar.rs  status_bar.rs  tab_bar.rs  toolbar.rs
src/export/: mod.rs
src/fs/: chapter.rs  material.rs  mod.rs  project.rs  settings.rs
src/markdown/: parser.rs  renderer.rs
src/model/: chapter.rs  mod.rs  project.rs  version.rs
src/styles/: main.css  mod.rs
