[package]
name = "chronicle"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-desktop = "0.6"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rfd = "0.14"
futures = "0.3"
tokio = { version = "1", features = ["time"] }
