[patch.crates-io]
tao = { path = "patches/tao-0.30.8" }

[package]
name = "chronicle"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["desktop", "document"] }
dioxus-desktop = "0.6"
image = "0.25"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["time"] }
zip = "2"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { version = "0.14", default-features = false }
